php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44617 mb_substitute_character('entity') convert mistake
Submitted: 2008-04-02 16:13 UTC Modified: 2008-07-31 22:54 UTC
From: dq2 at 55mail dot cc Assigned: moriyoshi (profile)
Status: Closed Package: mbstring related
PHP Version: 5.2.6RC3 OS: winxp
Private report: No CVE-ID: None
 [2008-04-02 16:13 UTC] dq2 at 55mail dot cc
Description:
------------
want: ♥ or ♥
but
return ੩

Reproduce code:
---------------
mb_internal_encoding('utf-8');

mb_substitute_character('entity');
echo mb_convert_encoding('♥', 'sjis-win', 'utf-8');


Expected result:
----------------
♥

Actual result:
--------------
੩

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-04-02 16:20 UTC] dq2 at 55mail dot cc
oh converted :-(
> echo mb_convert_encoding('♥', 'sjis-win', 'utf-8');
this line '♥' means utf-8 heart mark. (equal &hearts)
 [2008-07-31 22:54 UTC] jani@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC