- MFH: Fixed bug #44617 (wrong HTML entity output when substitute_character=entity).